多言語対応

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "bulma": "^1.0.0",
     "nuxt": "^3.12.2",
     "sass-embedded": "^1.89.2"
+  },
+  "dependencies": {
+    "@nuxtjs/i18n": "^10.0.3"
   }
 }
